--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -69,7 +69,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.3dev, 2016/08/27}
+\date{Version 1.3dev, 2016/08/29}
 
 \maketitle
 
@@ -1024,8 +1024,10 @@ the \jslp\ style files. Thanks, Dominik.
 \item Forthcoming (v. 1.3):
      \begin{itemize}
      	\item \textbf{Backwards-incompatible change!} Use \textsf{datetime2} instead of \textsf{datetime} and \textsf{advdate}.
-     	This changes the interface to set the lecture date format. See sec.~\ref{sec:custdate}.
-     	\item Fix output of \jcsmacro{SetBreaks} when no \joption{span} argument is given.	
+     	      This changes the interface to set the lecture date format. See sec.~\ref{sec:custdate}.
+     	\item Fix output of \jcsmacro{SetBreaks} when no \joption{span} argument is given.
+     	\item Protect content of some \jcsmacro{Lec}* macros to allow for commas in
+     	      titles etc.
         \item Microtypographic improvement in default definition of the lecture date format.
 	 \end{itemize}
 \item 2016/05/11 (v. 1.2):
