Protect content of some options as well.

--- a/README
+++ b/README
@@ -74,8 +74,8 @@ instructions; also have a look at the example files.
 
                          - Fix output of \SetBreaks when no span argument is given.
 
-                         - Protect content of some \Lec* macros to allow for commas in
-                           titles etc.
+                         - Protect content of some \Lec* macros and options to allow for
+                           commas in titles etc.
 
                          - Small microtypographic improvement in default definition of
                            the lecture date format.
