--- a/README
+++ b/README
@@ -68,7 +68,7 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
-* V. 1.3 (forthc.):      - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
+* V. 1.3 (2016-08-31):   - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
                            and advdate. This changes the interface to set the lecture date
                            format. Please refer to the documentation for details.
 
