--- a/README
+++ b/README
@@ -68,6 +68,10 @@ instructions; also have a look at the example files.
 
 == CHANGES ==
 
+* V 1.4 (forthcoming):   - Add instructor short forms for lecture and session.
+
+                         - Add boolean check for identical lecture and session instructor.
+
 * V. 1.3 (2016-08-31):   - BACKWARDS-INCOMPATIBLE CHANGE! Use datetime2 instead of datetime
                            and advdate. This changes the interface to set the lecture date
                            format. Please refer to the documentation for details.
