--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -69,7 +69,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 1.3, 2016/08/31}
+\date{Version 1.4dev, 2016/10/07}
 
 \maketitle
 
@@ -237,6 +237,7 @@ Also cf. sec.~\ref{sec:styles}.
 \item [\joption{instructor=<name>}] (General) course instructor's name.
       It is possible to specify different or specific instructors for individual sessions
       (see sec. \ref{sec:lecplan}).
+\item [\joption{shortinstructor=<name>}] Short form of the (general) course instructor's name (e.\,g., for headings).
 \item [\joption{platform=<data>}] Information of the e-learning platform
       (such as the URL)
 \item [\joption{officehours=<data>}] Date of your office hours
@@ -306,7 +307,7 @@ the first session (the argument \emph{must} have the form DD/MM/YYYY)
 
 \subsubsection{Additional information}\label{ses-add}
 \begin{itemize}
-\item \jcsmacro{LecInstructor\{<name>\}}: Record the (general) instructor's name
+\item \jcsmacro{LecInstructor[<short name>]\{<name>\}}: Record the (general) instructor's name, including an optional short form for headings etc.
 \item \jcsmacro{SetOfficeHours\{<office hours>\}}: Record date of your office hours
 \item \jcsmacro{SetOfficeNumber\{<office number>\}}: Record your office (room) number
 \item \jcsmacro{SetPlatform\{<platform information>\}}: Record information
@@ -331,6 +332,7 @@ Valid \joption{<options>} include:
     headings etc.)
 \item \joption{instructor=<name>}: Specific instructor for this session
     (if it differs from the usual course instructor)
+\item \joption{shortinstructor=<name>}: Short form of the specific instructor for this session
 \item \joption{presstudents=<names>}: Students presenting in this session
     (used for student presentation lists, see below sec.~\ref{sec:preslists})
 \item \joption{room=<room>}: Specific room for this session (if it differs
@@ -451,6 +453,7 @@ of the semester (such as ``Winter\-semester 2014'')
 \item \jcsmacro{lecuniversity}: Outputs the university's name
 \item \jcsmacro{lecinstitute}: Outputs the institute's/department's name
 \item \jcsmacro{lecinstructor}: Outputs the (general) instructor's name
+\item \jcsmacro{lecshortinstructor}: Outputs short form of the (general) instructor's name
 \item \jcsmacro{lecroom}: Outputs the (general) course room
 \item \jcsmacro{lecplatform}: Outputs information on the
 e-learning platform
@@ -620,7 +623,8 @@ the current session
 \item \jcsmacro{sessubtitle}: Subtitle of the current session
 \item \jcsmacro{sesfulltitle}: Full title of the current
 session (title, separator, subtitle)
-\item \jcsmacro{sesinstructor}: Current session's instructor's name
+\item \jcsmacro{sesinstructor}: Current session's instructor's name. If you want to output this name only if it differs from the general instructor (\jcsmacro{lecinstructor}), you can use the check \jcsmacro{ifbool\{othersesinstructor\}\{\textbackslash sesinstructor\}\{\}}
+\item \jcsmacro{sesshortinstructor}: Current session's instructor's short name
 \item \jcsmacro{sespresstudents}: Students presenting in this session
 \item \jcsmacro{sesnr}: Number of the current session
 \item \jcsmacro{sesroom}: Room of the current session
@@ -641,6 +645,7 @@ information for sessions that follow or precede the current session by a specifi
 	\item \jcsmacro{AdjSessionShortDate[<offset>]}: Outputs the short
 	date (no year) of the adjacent session
 	\item \jcsmacro{AdjSessionInstructor[<offset>]}: Outputs the name of the instructor of the adjacent session
+	\item \jcsmacro{AdjSessionShortInstructor[<offset>]}: Outputs the short name of the instructor of the adjacent session
 	\item \jcsmacro{AdjSessionPresStudents[<offset>]}: Outputs the name of the students presenting in the adjacent session
 	\item \jcsmacro{AdjSessionRoom[<offset>]}: Outputs the room of the adjacent session
 \end{itemize}
@@ -663,6 +668,8 @@ session number \joption{<nr>}
 \item \jcsmacro{SessionShortDate\{<nr>\}}: Outputs the short
 date (no year) of session number \joption{<nr>}
 \item \jcsmacro{SessionInstructor\{<nr>\}}: Outputs the name of the instructor of session
+number \joption{<nr>}
+\item \jcsmacro{SessionShortInstructor\{<nr>\}}: Outputs the short name of the instructor of session
 number \joption{<nr>}
 \item \jcsmacro{SessionPresStudents\{<nr>\}}: Outputs the name of the students presenting
 in session number \joption{<nr>}
@@ -1021,6 +1028,11 @@ the \jslp\ style files. Thanks, Dominik.
 \section{Release History}
 
 \begin{itemize}
+\item Forthcoming (v. 1.4):
+	\begin{itemize}
+		\item Add instructor short forms for lecture and session.
+		\item Add boolean check for identical lecture and session instructor.
+	\end{itemize}
 \item 2016/08/31 (v. 1.3):
      \begin{itemize}
      	\item \textbf{Backwards-incompatible change!} Use \textsf{datetime2} instead of \textsf{datetime} and \textsf{advdate}.
